<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity2">

    <TextView
        android:id="@+id/tvheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color"
        android:padding="20sp"
        android:text="@string/eco_energy"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:text="@string/formulario"
            android:textColor="@color/color"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et1"
            style="@style/style_edittext"
            android:autofillHints="nombre"
            android:hint="@string/nombre"
            android:inputType="text" />

        <EditText
            android:id="@+id/et2"
            style="@style/style_edittext"
            android:autofillHints="direccion"
            android:hint="@string/direccion"
            android:inputType="text" />

        <EditText
            android:id="@+id/et3"
            style="@style/style_edittext"
            android:autofillHints="telefono"
            android:hint="@string/telefono"
            android:inputType="phone" />

        <EditText
            android:id="@+id/et4"
            style="@style/style_edittext"
            android:autofillHints="correo"
            android:inputType="textEmailAddress"
            android:hint="@string/correo" />


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rd1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/casa" />

            <RadioButton
                android:id="@+id/rd2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apartamento" />

            <RadioButton
                android:id="@+id/rd3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rural" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paneles_solares" />

            <CheckBox
                android:id="@+id/cb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aerogeneradores" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/cb3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otros" />

        <Button
            android:id="@+id/btn_eviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:backgroundTint="@color/color"
            android:text="@string/enviar"
            android:textSize="26sp"
            app:cornerRadius="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color"
        android:textColor="@color/white"
        android:padding="10sp"
        android:text="@string/todos_a_la_u"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>